--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "algorithm": "cpp",
         "__tree": "cpp",
         "map": "cpp",
-        "unordered_set": "cpp"
-    }
+        "unordered_set": "cpp",
+        "set": "cpp"
+}
 }
