--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "queue": "cpp",
+        "deque": "cpp",
+        "stack": "cpp"
     }
 }
